--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,14 +9,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0)),
-    url('../images/flames.png'); */
   background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 0, 0), rgb(153, 153, 153));
-  /* width: 100vw; */
-  height: 100vh;
   color: white;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 code {
